<resources>
    <string name="app_name">eXeReader</string>
    <string name="navigation_drawer_open">Show menu</string>
    <string name="navigation_drawer_close">Hide menu</string>
    <string name="nav_header_title">eXeReader</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Details</string>
    <string name="menu_ayuda">Help</string>
    <string name="autor">Authorship:</string>
    <string name="descripcion">Description:</string>
    <string name="Ayuda">Help</string>
    <string name="wha">WhatsApp</string>
    <string name="correo">Email</string>
    <string name="licencia">License:</string>
    <string name="te">Telegram</string>
    <string name="otros">Others</string>
    <string name="floatingButton">Email</string>
    <string name="ema">Email</string>
    <string name="nVersion">1.0</string>
    <string name="imagenlogo">eXeReader</string>
    <string name="enviar">Send</string>
    <string name="menu_home">eXeReader</string>
    <string name="menu_slideshow">Options</string>
    <string name="menu_contacto">Contact</string>
    <string name="button">Search file</string>
    <string name="text_archivos">Recent files</string>
    <string name="tituloAyuda">Help</string>
    <string name="titulo">Title:</string>
    <string name="imagen">Project image</string>
    <string name="anterior">Previous</string>
    <string name="siguiente">Next</string>
    <string name="idioma">Language:</string>
    <string name="tit">Suggestions</string>
    <string name="compartir">Share:</string>
    <string name="borrar">Delete:</string>
    <string name="borrarApp">Remove content from the application</string>
    <string name="opciones">Current content options</string>
    <string name="sobre_la_aplicaci_n">Application</string>
    <string name="sobre_el_proyecto">About eXeReader</string>
    <string name="contenido">Title:</string>
    <string name="menu_creditos">Credits</string>
    <string name="nav_sugerencias">Suggestions</string>
    <string name="cont">No contents</string>
    <string name="no_info">-</string>
    <string name="ordFecha">Date</string>
    <string name="ordAutor">Author</string>
    <string name="ordTitulo">Title</string>
    <string name="orden">Sort</string>
    <string name="ordFechaAsc">Old-New</string>
    <string name="ordFechaDesc">New-Old</string>
    <string name="ordTituloAsc">A-Z</string>
    <string name="ordTituloDesc">Z-A</string>
    <string name="seleccionDeRecurso">Resource selector</string>
    <string name="seleccionMensaje">from where you want to access the file?</string>
    <string name="archivoLocal">Local file</string>
    <string name="desdeURL">From Url</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="introducirUrl">Enter URL</string>
    <string name="urlMensaje">Please enter the URL of the resource you want to access</string>
</resources>